--- a/t.css
+++ b/t.css
@@ -114,3 +114,7 @@ footer{
 .single-footer a{
     color: navy;
 }
+@media only screen and (max-width: 600px)
+ body{
+     background-color: whitesmoke;
+ }
