--- a/t.css
+++ b/t.css
@@ -49,6 +49,7 @@ header ul li a{
     font-weight: 50px;
     transition: 0.5s;
 }
+@media only screen and (max-width: 600px)
 .banner{
     position: fixed;
     width: 100%;
@@ -61,6 +62,7 @@ header sticky logo,
 header sticky ul li a{
     color:black;
 }
+@media only screen and (max-width: 600px)
 p {font-family:Arial, Helvetica, sans-serif; color:black;}
 body { background-color:white;}
 
