--- a/t.css
+++ b/t.css
@@ -122,6 +122,8 @@ footer{
  }
 @media only screen and (max-width: 768px)
 [class*="col_"]{
-    width=100%}
+    width=100%
+}
 img{
-max-width:100%}
+max-width:100%
+}
