--- a/t.css
+++ b/t.css
@@ -62,7 +62,7 @@ header sticky logo,
 header sticky ul li a{
     color:black;
 }
-@media only screen and (max-width: 600px)
+
 p {font-family:Arial, Helvetica, sans-serif; color:black;}
 body { background-color:white;}
 
@@ -100,6 +100,7 @@ footer{
     position: relative;
     bottom: 0;
     background-color:silver;
+    padding:15px;
 }
 .center{
     display: block;
@@ -119,11 +120,4 @@ footer{
 @media only screen and (max-width: 600px)
  body{
      background-color: whitesmoke;
- }
-@media only screen and (max-width: 768px)
-[class*="col_"]{
-    width=100%
-}
-img{
-max-width:100%
 }
