--- a/t.css
+++ b/t.css
@@ -63,7 +63,12 @@ header sticky ul li a{
     color:black;
 }
 
-p {font-family:Arial, Helvetica, sans-serif; color:black;}
+p {font-family:Arial, Helvetica, sans-serif; 
+    color:black;
+    text-indent:4%
+    margin-left:2.5em;
+    margin-right:2.5em;
+  }
 body { background-color:white;}
 
 table {font-family:Arial, Helvetica, sans-serif;}
@@ -121,4 +126,32 @@ footer{
  body{
      background-color: whitesmoke;
 }
+@viewport{
+    zoom:1.0;
+    width: extend-to-zoom;
+}
+@-ms-viewport{
+    width:extend-to-zoom;
+    zoom:1.0
+}
+@viewport{
+    width:device-width;
+    zoom:1.0;
+}
+@-ms-viewport{
+    width:device-width;
+}
+@media only screen and (max-width: 600px){
+    .col-s-1 {width:8.33%;}
+    .col-s-2 {width:16.66%}
+    .col-s-3 {width:25%;}  
+    .col-s-4 {width:33.33%;}
+    .col-s-5 {width:41.66%;} 
+    .col-s-6 {width:50%;}
+    .col-s-7 {width:58.33%;}
+    .col-s-8 {width:66.66%;}
+    .col-s-9 {width:75%;}
+    .col-s-10 {width:83.33%;}
+    .col-s-11 {width:91.66%;}
+    .col-s-12 {width:100%;}
 
