--- a/t.css
+++ b/t.css
@@ -99,6 +99,7 @@ h2 {font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     font-size: 16px;
 
 }
+@media only screen and (max-width: 600px)
 footer{
     width:100%;
     height:200px;
