--- a/t.css
+++ b/t.css
@@ -142,6 +142,9 @@ footer{
 @-ms-viewport{
     width:device-width;
 }
+[class*="col-"]{
+    width:100%
+}
 @media only screen and (max-width: 600px){
     .col-s-1 {width:8.33%;}
     .col-s-2 {width:16.66%}
